--- a/pom.xml
+++ b/pom.xml
@@ -6,26 +6,41 @@
 
   <groupId>io.github.fruitcropxl</groupId>
   <artifactId>fruitcropxl-output</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2</version>
 
-  <name>output</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>The FruitCropXL output module.</description>
+  <url>https://github.com/FruitCropXL/FruitCropXL_Output-Module</url>
 
-  <repositories>
-    <repository>
-      <id>fruitcropxl-config.local</id>
-      <name>fruitcropxl-config</name>
-      <url>file:${project.basedir}/repo</url>
-    </repository>
-  </repositories>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <jackson.version>2.17.3</jackson.version>
   </properties>
+
+  <developers>
+    <developer>
+      <id>fruitcropxl</id>
+      <name>FruitCropXL</name>
+      <email>fruitcropxl@gmail.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/FruitCropXL/FruitCropXL_Output-Module.git</connection>
+    <developerConnection>scm:git:ssh://github.com/FruitCropXL/FruitCropXL_Output-Module.git</developerConnection>
+    <url>https://github.com/FruitCropXL/FruitCropXL_Output-Module</url>
+  </scm>
 
   <dependencyManagement>
     <dependencies>
