--- a/pom.xml
+++ b/pom.xml
@@ -150,10 +150,15 @@
       <artifactId>snakeyaml</artifactId>
       <version>2.2</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
+    </dependency> -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
     </dependency>
   </dependencies>
 
